objects/Payment_Credits__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PaymentCredits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndBy__c</fullName>
        <label>EndBy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ItemIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>ItemIdentifier</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>UPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipName>PaymentCredits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Credit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC - {000000}</displayFormat>
        <label>Credit #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>